k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eco-guard-service
  labels:
    app: eco-guard
spec:
  selector:
    app: eco-guard
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
